Fix fdo#45779 - accessing empty polygon.

Guard access to first polygon point.
(cherry picked from commit d37abad97d72bae0fd0269de12e94c7a7d3fd7e1)

Signed-off-by: Michael Stahl <mstahl@redhat.com>